# subsonic

./: .gitignore  CMakeLists.txt  README.md
doc/: Internationalisation.md  i18n.md
src/: config.hxx  config.hxx.in  embed.cxx  embed.hxx  files.cxx  files.hxx  i18n.hxx  main.cxx  options.cxx  options.hxx
